# sample-subdir-packages

./: pyproject.toml
lib_a/: pyproject.toml
lib_b/: pyproject.toml
lib_c/: pyproject.toml
